--- a/SHA1CalcOnMac/FindWindow.xib
+++ b/SHA1CalcOnMac/FindWindow.xib
@@ -12,15 +12,19 @@
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<string>NSTextField</string>
+			<string>NSComboBoxCell</string>
+			<string>NSPopUpButton</string>
+			<string>NSButton</string>
+			<string>NSMenu</string>
+			<string>NSButtonCell</string>
+			<string>NSTextFieldCell</string>
+			<string>NSMenuItem</string>
+			<string>NSComboBox</string>
+			<string>NSCustomObject</string>
 			<string>NSView</string>
 			<string>NSWindowTemplate</string>
-			<string>NSCustomObject</string>
-			<string>NSComboBox</string>
-			<string>NSButtonCell</string>
-			<string>NSComboBoxCell</string>
-			<string>NSButton</string>
-			<string>NSTextFieldCell</string>
+			<string>NSTextField</string>
+			<string>NSPopUpButtonCell</string>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -59,8 +63,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 55}, {62, 17}}</string>
 							<reference key="NSSuperview" ref="872989429"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
+							<reference key="NSNextKeyView" ref="134900691"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="185410802">
 								<int key="NSCellFlags">68288064</int>
@@ -97,7 +100,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{7, 12}, {106, 32}}</string>
 							<reference key="NSSuperview" ref="872989429"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="66465506"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="614940900">
@@ -119,7 +121,6 @@
 							<int key="NSvFlags">265</int>
 							<string key="NSFrame">{{279, 12}, {70, 32}}</string>
 							<reference key="NSSuperview" ref="872989429"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="152252656">
@@ -141,7 +142,6 @@
 							<int key="NSvFlags">265</int>
 							<string key="NSFrame">{{207, 12}, {72, 32}}</string>
 							<reference key="NSSuperview" ref="872989429"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="856643207"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="337393515">
@@ -163,8 +163,7 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 80}, {38, 17}}</string>
 							<reference key="NSSuperview" ref="872989429"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="134900691"/>
+							<reference key="NSNextKeyView" ref="631933461"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="951379988">
 								<int key="NSCellFlags">68288064</int>
@@ -181,8 +180,7 @@
 							<int key="NSvFlags">266</int>
 							<string key="NSFrame">{{84, 51}, {262, 26}}</string>
 							<reference key="NSSuperview" ref="872989429"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="760319158"/>
+							<reference key="NSNextKeyView" ref="416805112"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSComboBoxCell" key="NSCell" id="123058481">
 								<int key="NSCellFlags">343014976</int>
@@ -277,20 +275,128 @@
 								</object>
 							</object>
 						</object>
+						<object class="NSPopUpButton" id="631933461">
+							<reference key="NSNextResponder" ref="872989429"/>
+							<int key="NSvFlags">266</int>
+							<string key="NSFrame">{{81, 74}, {265, 26}}</string>
+							<reference key="NSSuperview" ref="872989429"/>
+							<reference key="NSNextKeyView" ref="760319158"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSPopUpButtonCell" key="NSCell" id="1049351109">
+								<int key="NSCellFlags">-2076049856</int>
+								<int key="NSCellFlags2">2048</int>
+								<reference key="NSSupport" ref="492687974"/>
+								<reference key="NSControlView" ref="631933461"/>
+								<int key="NSButtonFlags">109199615</int>
+								<int key="NSButtonFlags2">129</int>
+								<string key="NSAlternateContents"/>
+								<string key="NSKeyEquivalent"/>
+								<int key="NSPeriodicDelay">400</int>
+								<int key="NSPeriodicInterval">75</int>
+								<nil key="NSMenuItem"/>
+								<bool key="NSMenuItemRespectAlignment">YES</bool>
+								<object class="NSMenu" key="NSMenu" id="957527978">
+									<string key="NSTitle">OtherViews</string>
+									<object class="NSMutableArray" key="NSMenuItems">
+										<bool key="EncodedWithXMLCoder">YES</bool>
+										<object class="NSMenuItem" id="797564078">
+											<reference key="NSMenu" ref="957527978"/>
+											<string key="NSTitle">PATH</string>
+											<string key="NSKeyEquiv"/>
+											<int key="NSKeyEquivModMask">1048576</int>
+											<int key="NSMnemonicLoc">2147483647</int>
+											<int key="NSState">1</int>
+											<object class="NSCustomResource" key="NSOnImage" id="347738910">
+												<string key="NSClassName">NSImage</string>
+												<string key="NSResourceName">NSMenuCheckmark</string>
+											</object>
+											<object class="NSCustomResource" key="NSMixedImage" id="822639976">
+												<string key="NSClassName">NSImage</string>
+												<string key="NSResourceName">NSMenuMixedState</string>
+											</object>
+											<string key="NSAction">_popUpItemAction:</string>
+											<int key="NSTag">1</int>
+											<reference key="NSTarget" ref="1049351109"/>
+										</object>
+										<object class="NSMenuItem" id="127381272">
+											<reference key="NSMenu" ref="957527978"/>
+											<string key="NSTitle">PATH (startWith)</string>
+											<string key="NSKeyEquiv"/>
+											<int key="NSKeyEquivModMask">1048576</int>
+											<int key="NSMnemonicLoc">2147483647</int>
+											<reference key="NSOnImage" ref="347738910"/>
+											<reference key="NSMixedImage" ref="822639976"/>
+											<string key="NSAction">_popUpItemAction:</string>
+											<int key="NSTag">2</int>
+											<reference key="NSTarget" ref="1049351109"/>
+										</object>
+										<object class="NSMenuItem" id="960193116">
+											<reference key="NSMenu" ref="957527978"/>
+											<string key="NSTitle">PATH (endWith)</string>
+											<string key="NSKeyEquiv"/>
+											<int key="NSKeyEquivModMask">1048576</int>
+											<int key="NSMnemonicLoc">2147483647</int>
+											<reference key="NSOnImage" ref="347738910"/>
+											<reference key="NSMixedImage" ref="822639976"/>
+											<string key="NSAction">_popUpItemAction:</string>
+											<int key="NSTag">3</int>
+											<reference key="NSTarget" ref="1049351109"/>
+										</object>
+										<object class="NSMenuItem" id="178856246">
+											<reference key="NSMenu" ref="957527978"/>
+											<string key="NSTitle">PATH (Regexp)</string>
+											<string key="NSKeyEquiv"/>
+											<int key="NSMnemonicLoc">2147483647</int>
+											<reference key="NSOnImage" ref="347738910"/>
+											<reference key="NSMixedImage" ref="822639976"/>
+											<string key="NSAction">_popUpItemAction:</string>
+											<int key="NSTag">4</int>
+											<reference key="NSTarget" ref="1049351109"/>
+										</object>
+										<object class="NSMenuItem" id="760516972">
+											<reference key="NSMenu" ref="957527978"/>
+											<string key="NSTitle">SHA1</string>
+											<string key="NSKeyEquiv"/>
+											<int key="NSMnemonicLoc">2147483647</int>
+											<reference key="NSOnImage" ref="347738910"/>
+											<reference key="NSMixedImage" ref="822639976"/>
+											<string key="NSAction">_popUpItemAction:</string>
+											<int key="NSTag">10</int>
+											<reference key="NSTarget" ref="1049351109"/>
+										</object>
+										<object class="NSMenuItem" id="975382421">
+											<reference key="NSMenu" ref="957527978"/>
+											<string key="NSTitle">MD5</string>
+											<string key="NSKeyEquiv"/>
+											<int key="NSMnemonicLoc">2147483647</int>
+											<reference key="NSOnImage" ref="347738910"/>
+											<reference key="NSMixedImage" ref="822639976"/>
+											<string key="NSAction">_popUpItemAction:</string>
+											<int key="NSTag">11</int>
+											<reference key="NSTarget" ref="1049351109"/>
+										</object>
+									</object>
+									<reference key="NSMenuFont" ref="492687974"/>
+								</object>
+								<int key="NSSelectedIndex">-1</int>
+								<int key="NSPreferredEdge">1</int>
+								<bool key="NSUsesItemFromMenu">YES</bool>
+								<bool key="NSAltersState">YES</bool>
+								<int key="NSArrowPosition">2</int>
+							</object>
+						</object>
 					</object>
 					<string key="NSFrameSize">{363, 108}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="329395001"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
 				<string key="NSMaxSize">{1e+13, 1e+13}</string>
 			</object>
 			<object class="NSButton" id="706823021">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">268</int>
 				<string key="NSFrameSize">{82, 32}</string>
-				<reference key="NSSuperview"/>
 				<bool key="NSEnabled">YES</bool>
 				<object class="NSButtonCell" key="NSCell" id="853494338">
 					<int key="NSCellFlags">67239424</int>
@@ -352,6 +458,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
+						<string key="label">popupSearchMode</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="631933461"/>
+					</object>
+					<int key="connectionID">60</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="271664580"/>
 						<reference key="destination" ref="1001"/>
@@ -408,6 +522,7 @@
 							<reference ref="66465506"/>
 							<reference ref="329395001"/>
 							<reference ref="134900691"/>
+							<reference ref="631933461"/>
 						</object>
 						<reference key="parent" ref="271664580"/>
 					</object>
@@ -509,6 +624,68 @@
 						<reference key="object" ref="123058481"/>
 						<reference key="parent" ref="134900691"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">51</int>
+						<reference key="object" ref="631933461"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="1049351109"/>
+						</object>
+						<reference key="parent" ref="872989429"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">52</int>
+						<reference key="object" ref="1049351109"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="957527978"/>
+						</object>
+						<reference key="parent" ref="631933461"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">53</int>
+						<reference key="object" ref="957527978"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="797564078"/>
+							<reference ref="127381272"/>
+							<reference ref="960193116"/>
+							<reference ref="178856246"/>
+							<reference ref="760516972"/>
+							<reference ref="975382421"/>
+						</object>
+						<reference key="parent" ref="1049351109"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">54</int>
+						<reference key="object" ref="797564078"/>
+						<reference key="parent" ref="957527978"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">55</int>
+						<reference key="object" ref="127381272"/>
+						<reference key="parent" ref="957527978"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">56</int>
+						<reference key="object" ref="960193116"/>
+						<reference key="parent" ref="957527978"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">57</int>
+						<reference key="object" ref="178856246"/>
+						<reference key="parent" ref="957527978"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">58</int>
+						<reference key="object" ref="760516972"/>
+						<reference key="parent" ref="957527978"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">59</int>
+						<reference key="object" ref="975382421"/>
+						<reference key="parent" ref="957527978"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -535,6 +712,15 @@
 					<string>45.IBPluginDependency</string>
 					<string>46.IBPluginDependency</string>
 					<string>47.IBPluginDependency</string>
+					<string>51.IBPluginDependency</string>
+					<string>52.IBPluginDependency</string>
+					<string>53.IBPluginDependency</string>
+					<string>54.IBPluginDependency</string>
+					<string>55.IBPluginDependency</string>
+					<string>56.IBPluginDependency</string>
+					<string>57.IBPluginDependency</string>
+					<string>58.IBPluginDependency</string>
+					<string>59.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -543,6 +729,15 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<boolean value="YES"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -572,32 +767,9 @@
 				<reference key="dict.values" ref="1002"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">50</int>
+			<int key="maxID">60</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">FindWindowController</string>
-					<string key="superclassName">NSWindowController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">txtSearch</string>
-						<string key="NS.object.0">NSComboBox</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">txtSearch</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">txtSearch</string>
-							<string key="candidateClassName">NSComboBox</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FindWindowController.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
@@ -606,5 +778,18 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<bool key="EncodedWithXMLCoder">YES</bool>
+			<object class="NSArray" key="dict.sortedKeys">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<string>NSMenuCheckmark</string>
+				<string>NSMenuMixedState</string>
+			</object>
+			<object class="NSMutableArray" key="dict.values">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<string>{9, 8}</string>
+				<string>{7, 2}</string>
+			</object>
+		</object>
 	</data>
 </archive>
